objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>ACV_Anywhere_or_FBI__c</fullName>
        <description>Designated Work checkbox for ACV Anywhere or FBI</description>
        <formula>(WorkType.Work_Type_Unique_ID__c = &apos;acvhome&apos;) || (WorkType.Work_Type_Unique_ID__c = &apos;fbi&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV Anywhere or FBI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AO_Dynamic_Priority__c</fullName>
        <description>CASE(Work_Order__r.Work_Order_Scheduling_Priority__c, 1, 1, 2, 0.2195 ,3 , 0.1463, 4, 0.0976, 5, 0.0488, 0) * 0.5 * 100 + IF(Work_Order__r.Work_Order_Scheduling_Priority__c = 1, 1, IF (ROUND(Original_Due_Date__c - NOW(),0) &gt;= 0, CASE( ROUND(Original_Due_Date__c - NOW(),0) , 0, 0.2073, 1, 0.122, 2, 0.0976, 0.0732), CASE( ROUND(Original_Due_Date__c - NOW(),0) , -1, 0.2195, -2, 0.2317, 0.2439))) * 0.5 * 100</description>
        <formula>CASE(Work_Order__r.Work_Order_Scheduling_Priority__c, 1, 1, 2, 0.2195 ,3 , 0.1463, 4, 0.0976, 5, 0.0488, 0) * 0.5 * 100 + IF(Work_Order__r.Work_Order_Scheduling_Priority__c = 1, 1, IF (ROUND(Original_Due_Date__c - NOW(),0) &gt;= 0, CASE( ROUND(Original_Due_Date__c - NOW(),0) , 0, 0.2073, 1, 0.122, 2, 0.0976, 0.0732), CASE( ROUND(Original_Due_Date__c - NOW(),0) , -1, 0.2195, -2, 0.2317, 0.2439))) * 0.5 * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>_AO Dynamic Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AO_IsAO_Is_ASAP_Important_ASAP_Important__c</fullName>
        <formula>DueDate - CreatedDate &lt;= 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>_AO_Is_ASAP_Important</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AO_Is_ASAP_Non_Important__c</fullName>
        <formula>DueDate - CreatedDate &gt; 1</formula>
        <label>_AO Is ASAP Non Important</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AO_Optimizable__c</fullName>
        <formula>AND( DueDate &gt; NOW() , DueDate &lt; NOW() + 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>_AO Optimizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_Change_From_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Changes from FLOWS Only.</description>
        <label>Allow Change From Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_VCI_Status_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow a VCI Status Change in Flows ONLY.</description>
        <label>Allow VCI Status Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource_Has_In_Progress_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned Resource Has In Progress Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beta_Flag__c</fullName>
        <description>Beta Flag gets set to True if the Service Territory is in the specified Beta testing territory (or territories).</description>
        <formula>OR ( BEGINS( ServiceTerritory.Name, &apos;GN&apos; ),
BEGINS( ServiceTerritory.Name, &apos;OV&apos; ) )</formula>
        <inlineHelpText>Beta Flag gets set to True if the Service Territory is in the specified Beta testing territory (or territories).</inlineHelpText>
        <label>Beta Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPO_Work__c</fullName>
        <formula>CONTAINS( UPPER( WorkType.Work_Type_Unique_ID__c ), &apos;CPO&apos; )</formula>
        <label>CPO Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cannot_Complete_Reason__c</fullName>
        <description>Picklist for selection why a service appointment is being given a status of &apos;Cannot Complete&apos;</description>
        <label>Cannot Complete Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insufficient time to complete</fullName>
                </value>
                <value>
                    <fullName>Dealer Uncooperative</fullName>
                </value>
                <value>
                    <fullName>Safety Hazard</fullName>
                </value>
                <value>
                    <fullName>Dry Run Auction  - Auction uncooperative</fullName>
                </value>
                <value>
                    <fullName>Dry Run Auction  - Contact not available</fullName>
                </value>
                <value>
                    <fullName>Dry Run Auction  - In service or body shop</fullName>
                </value>
                <value>
                    <fullName>Dry Run Auction  - Incorrect contact listed</fullName>
                </value>
                <value>
                    <fullName>Dry Run Auction  - Moved to another location</fullName>
                </value>
                <value>
                    <fullName>Dry Run Auction  - Unable to locate keys</fullName>
                </value>
                <value>
                    <fullName>Dry Run Auction  - Unable to locate vehicle</fullName>
                </value>
                <value>
                    <fullName>Dry Run Auction  - Unit sold</fullName>
                </value>
                <value>
                    <fullName>Dry Run Auction  - Vehicle will not start</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer  - Contact not available</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer  - Dealer uncooperative</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer  - Incorrect contact listed</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer  - Moved to another location</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer  - Unable to locate vehicle</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer  - Unit sold</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer  - Vehicle will not start</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer -Unable to access vehicle at storage facility</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer- In service or body shop</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer- No start/ No jump</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer- Purchasing</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer- Unable to locate keys</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer- Vehicle moved to auto auction</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer- Vehicle not at location</fullName>
                </value>
                <value>
                    <fullName>Dry Run Dealer- Vehicle not at storage location</fullName>
                </value>
                <value>
                    <fullName>Dry Run Home  - Address incomplete/incorrect</fullName>
                </value>
                <value>
                    <fullName>Dry Run Home  - Lessee not available</fullName>
                </value>
                <value>
                    <fullName>Dry Run Home  - No answer to calls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Canceled_Notes__c</fullName>
        <label>Completed/Canceled Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_Number__c</fullName>
        <label>Contact Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointments (Current Service Resource)</relationshipLabel>
        <relationshipName>Service_Appointments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealership_Name__c</fullName>
        <description>The name of the Dealership.</description>
        <label>Dealership Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delinquent_Assignment__c</fullName>
        <description>Formula Field determines if the service appointment is overdue for assignment</description>
        <formula>ISPICKVAL(Account__r.Dealer_Type__c, &quot;5&quot;) &amp;&amp; DATEVALUE(EarliestStartTime)+2 &lt;= TODAY() &amp;&amp; ISPICKVAL(Status,&quot;New&quot;)</formula>
        <label>Delinquent Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Latitude__c</fullName>
        <formula>Latitude</formula>
        <label>Display Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Longitude__c</fullName>
        <formula>Longitude</formula>
        <label>Display Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Driving_Directions__c</fullName>
        <label>Driving Directions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dry_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dry Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DueDate_Adjustment_Engine_Bypass__c</fullName>
        <formula>Work_Order__r.DueDate_Adjustment_Engine_Bypass__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DueDate Adjustment Engine Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date_Date_Type__c</fullName>
        <description>This formula field converts the Due Date field (which is a datetime field) into a pure date field</description>
        <formula>DATEVALUE(DueDate)</formula>
        <label>Due Date (Date Type)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Optimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Assignment_Id__c</fullName>
        <label>External Assignment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Link_Code__c</fullName>
        <label>External Link Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Link__c</fullName>
        <label>External Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FSL__Appointment_Grade__c</fullName>
        <label>Appointment Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Auto_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Duration_In_Minutes__c</fullName>
        <formula>IF (ISBLANK(SchedStartTime), 0, (SchedEndTime - SchedStartTime)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__GanttColor__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__GanttIcon__c</fullName>
        <inlineHelpText>Enter a URL for an icon. The URL must end in an image suffix, such as .png.</inlineHelpText>
        <label>Gantt Icon</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Display_Date__c</fullName>
        <label>Gantt Display Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__InJeopardyReason__c</fullName>
        <label>In Jeopardy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delayed Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Finish</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Due Date Approaching</fullName>
                </value>
                <value>
                    <fullName>DueDate Changed (Roll Over)</fullName>
                </value>
                <value>
                    <fullName>Unscheduled Dealer-Auction Task with SLA in Past</fullName>
                </value>
                <value>
                    <fullName>Not Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Unresourced</fullName>
                </value>
                <value>
                    <fullName>Forced Appointment</fullName>
                </value>
                <value>
                    <fullName>Unable to update Schedule</fullName>
                </value>
                <value>
                    <fullName>Open FBI</fullName>
                </value>
                <value>
                    <fullName>Late Start Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__InJeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsMultiDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Last_Updated_Epoch__c</fullName>
        <label>Last Updated Epoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDS_Calculated_length__c</fullName>
        <label>Multiday Work Calculated length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDT_Operational_Time__c</fullName>
        <label>Multiday Work Operational Time</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Pinned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pinned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Schedule_Mode__c</fullName>
        <label>Schedule Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Schedule_over_lower_priority_appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Over Lower Priority Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Time_Dependency__c</fullName>
        <label>Time Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Start</fullName>
                </value>
                <value>
                    <fullName>Start After Finish</fullName>
                </value>
                <value>
                    <fullName>Finish Before Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Use_Async_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Async Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Virtual_Service_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Service For Chatter Action (SLR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_For_Daily_Optimization__c</fullName>
        <description>Excludes Records that have the &apos;Exclude from Optimization&apos; Checkbox checked or records that are suppose to be included in nightly optimization for</description>
        <formula>AND(
    !Exclude_from_Optimization__c, 
    !Committed__c,  
    NOT(ISPICKVAL(Status,&apos;Cannot Complete&apos;)),  
    NOT(ISPICKVAL(Status, &apos;Canceled&apos;)),
    NOT(ISPICKVAL(Status, &apos;Offer Attempted&apos;)),
    NOT(BEGINS( WorkType.Work_Type_Unique_ID__c, &quot;cpo&quot;)),
    NOT(WorkType.Work_Type_Unique_ID__c = &quot;gmfia&quot;)
)</formula>
        <label>Filter For Daily Optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_for_Nightly_Optimization__c</fullName>
        <formula>AND(!Exclude_from_Optimization__c, 
    !Committed__c, 
    NOT(ISPICKVAL(Status,&apos;Cannot Complete&apos;)), 
    NOT(ISPICKVAL(Status, &apos;Canceled&apos;)), 
    NOT(ISPICKVAL(Status, &apos;Offer Attempted&apos;))
)</formula>
        <label>Filter for Nightly Optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Optimization__c</fullName>
        <description>This is a formula field used by service appointments created by revolving appointments. Optimization job uses this field to specify appointments created by revolving appointment</description>
        <formula>AND(ISPICKVAL(Work_Order__r.Origin__c, &apos;Revolving Term&apos;),  ISPICKVAL(Status, &apos;New&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include in Optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection_Notes__c</fullName>
        <label>Inspection Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Beta__c</fullName>
        <formula>ServiceTerritory.Beta_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Beta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_Appraisal_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate this Service Appointment is for a Live Appraisal Event.</description>
        <label>Live Appraisal Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Scheduled_Start_Time__c</fullName>
        <label>Local_Scheduled_Start_Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Service Resource who was most recently assigned to this service appointment via an assigned resource record.</description>
        <label>Most Recent Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_ASI_Work__c</fullName>
        <formula>NOT( WorkType.ASI_Work_Type__c )</formula>
        <label>Non-ASI Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Beta_Territory__c</fullName>
        <formula>CONTAINS( ServiceTerritory.Name, &apos;OV&apos; )</formula>
        <label>Not Beta Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Related_Work_Order_Lines__c</fullName>
        <label>Number of Related Work Order Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Due_Date__c</fullName>
        <label>Original Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Sched_End__c</fullName>
        <description>Original Scheduled End</description>
        <label>Original Sched End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Sched_Start__c</fullName>
        <description>Original Scheduled Start</description>
        <label>Original Sched Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Selected_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Offer</label>
        <referenceTo>Appointment_Offer__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to acknowledge special instructions if they exist.</description>
        <label>Special Instructions Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Inspection__c</fullName>
        <description>Designated Work checkbox for Standard Inspection</description>
        <formula>WorkType.Work_Type_Unique_ID__c = &apos;inspection&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Start_Time__c</fullName>
        <label>Travel Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WO_Line_Item_Count__c</fullName>
        <description>Work Order Line Item Count</description>
        <formula>Work_Order__r.LineItemCount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO Line Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>When_to_Return__c</fullName>
        <description>Input by the onsite inspector when canceling an appointment. Available in Complete Appointment flow.</description>
        <inlineHelpText>Input by the onsite inspector when canceling an appointment. Available in Complete Appointment flow.</inlineHelpText>
        <label>When to Return</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Today or Tomorrow (Return Work Order to Queue)</fullName>
                </value>
                <value>
                    <fullName>Unknown (Set Work Order to On Hold)</fullName>
                </value>
                <value>
                    <fullName>Never (Cancel the Work Order)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order_Status__c</fullName>
        <description>Hidden field used to display the Work Order Status on the Service Appointment Lightbox in the Dispatcher Console.</description>
        <formula>TEXT(Work_Order__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Type_Duration__c</fullName>
        <description>Work Type Estimated Duration</description>
        <formula>Work_Order__r.WorkType.DurationInMinutes</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Type Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Type_Name__c</fullName>
        <description>Work Type Name for the Work Order linked to this Service Appointment.</description>
        <formula>Work_Order__r.WorkType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_Unique_ID__c</fullName>
        <description>Work Type Unique ID for the Work Order linked to this Service Appointment.</description>
        <formula>Work_Order__r.WorkType.Work_Type_Unique_ID__c</formula>
        <label>Work Type Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xAO_Is_ASAP_Non_Important__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DueDate - CreatedDate &gt; 1</description>
        <label>x_AO Is ASAP Non Important</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Mobile_ListView</fullName>
        <columns>Work_Type_Name__c</columns>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>Contact</columns>
        <columns>STREET</columns>
        <columns>CITY</columns>
        <columns>STATE</columns>
        <columns>ZIP</columns>
        <filterScope>AssignedToMe</filterScope>
        <filters>
            <field>EarliestStartTime</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <label>Today&apos;s Appointments</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACVHome_FBI_Respect_Arrival_Window</fullName>
        <active>true</active>
        <description>You cannot update this service appointment to be outside of the specified arrival window.</description>
        <errorConditionFormula>(WorkType.Work_Type_Unique_ID__c = &apos;acvhome&apos; || WorkType.Work_Type_Unique_ID__c = &apos;fbi&apos;) &amp;&amp; 
NOT(ISBLANK(SchedStartTime)) &amp;&amp; 
(SchedStartTime &lt;  ArrivalWindowStartTime || SchedStartTime &gt;  ArrivalWindowEndTime)</errorConditionFormula>
        <errorMessage>You cannot update this service appointment to be outside of the specified arrival window.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_is_Required</fullName>
        <active>true</active>
        <description>An Address is required to create a Service Appointment</description>
        <errorConditionFormula>ISBLANK( Street ) || ISBLANK( City ) || ISBLANK( PostalCode ) || ISBLANK( State ) || ISBLANK( Country )</errorConditionFormula>
        <errorMessage>An Address is required to create a Service Appointment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Complete_Reason_Required</fullName>
        <active>true</active>
        <description>When Status = &apos;Cannot Complete&apos;, a Cannot Complete Reason and Notes is required</description>
        <errorConditionFormula>ISCHANGED(Status)
&amp;&amp;
ISPICKVAL(Status, &apos;Cannot Complete&apos;) 
&amp;&amp;
(ISPICKVAL( Cannot_Complete_Reason__c ,&apos;&apos; ) 
|| ISBLANK( Completed_Canceled_Notes__c) )</errorConditionFormula>
        <errorMessage>When Status = &apos;Cannot Complete&apos;, a Cannot Complete Reason and Notes is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complete_Requires_Dates</fullName>
        <active>true</active>
        <description>You cannot mark a Service Appointment as Complete without a Scheduled Start, Scheduled End, Actual Start, &amp; Actual End</description>
        <errorConditionFormula>TEXT( StatusCategory ) == &apos;Completed&apos; &amp;&amp;
(
ISBLANK( SchedEndTime ) ||
ISBLANK( SchedStartTime ) ||
ISBLANK( ActualStartTime ) ||
ISBLANK( ActualEndTime ) 
)</errorConditionFormula>
        <errorMessage>You cannot mark a Service Appointment as Complete without a Scheduled Start, Scheduled End, Actual Start, &amp; Actual End</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_Canceled_Notes_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Status, &apos;Canceled&apos;)
&amp;&amp;
ISBLANK(Completed_Canceled_Notes__c)</errorConditionFormula>
        <errorDisplayField>Completed_Canceled_Notes__c</errorDisplayField>
        <errorMessage>Completed/Canceled Notes field cannot be blank when status is &apos;Completed&apos; or &apos;Canceled&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dispatch_Work_Requires_Scheduled_Dates</fullName>
        <active>true</active>
        <description>You cannot mark a Service Appointment for Dispatch without a Scheduled Start &amp; Scheduled End</description>
        <errorConditionFormula>TEXT( Status ) == &apos;Dispatched&apos; &amp;&amp;
( ISBLANK( SchedStartTime ) || ISBLANK( SchedEndTime ) )</errorConditionFormula>
        <errorMessage>You cannot mark a Service Appointment for Dispatch without a Scheduled Start &amp; Scheduled End</errorMessage>
    </validationRules>
</CustomObject>